Replace anyhow with color eyre
