# public/openapi.json
@@ -117,6 +117,25 @@
         }
       }
     },
+    "/auth/check-username": {
+      "get": {
+        "tags": [
+          "Auth"
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json; charset=utf-8": {
+                "schema": {
+                  "type": "boolean"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/rooms": {
       "post": {
         "tags": [
